# fastapi-api-development

./: .env.example  README.md  pyproject.toml  requirements.txt
migrations/: README  env.py
migrations/versions/: 153deeb7722d_remove_exclude_from_password_hash.py  3361f77c0e11_add_role_to_user.py  50523091698b_create_table_for_reviews.py  5bade619903b_add_hash_password.py  66549e47792a_add_book_tags_table.py  78498eaa45b4_relate_users_to_books.py  92e83a47f268_init.py
src/: __init__.py  config.py  errors.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: model.py  routes.py  schema.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
